[tool.poetry]
name = "retrrry"
version = "3.0.5"
description = "Retry for Python3. No dependency."
authors = ["JC <jc@jucyai.com>"]
readme = "README.md"
repository = "https://github.com/yaojiach/retrrry"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = { version = "^22.6.0", allow-prereleases = true }
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = "tests/.*"
no_implicit_optional = true
python_version = "3.10"
show_error_codes = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true